# digital-literacy-platform-

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  build.sh  package-lock.json  package.json  render-build.sh  render.yaml  requirements.txt  setup.py  vercel.json
backend/: Dockerfile  alembic.ini  build.sh  check_schema.py  create_test_data.py  init_db.py  pyproject.toml  render.yaml  requirements.txt  test_auth.py  test_login.py  test_password.py
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  seed_data.py
backend/app/api/: admin.py  auth.py  courses.py  quizzes.py
backend/app/core/: config.py  security.py
backend/app/routers/: auth.py  auth_utils.py  courses.py  enrollments.py  modules.py  quizzes.py  users.py
backend/scripts/: add_quizzes_simple.py  check_db.py  check_db_fixed.py  check_users.py  create_superuser.py  create_test_courses.py  create_test_quizzes.py  create_test_users.py  seed_data.py  test_teacher_flow.py  update_course_images.py
frontend/: .env.example  .gitignore  babel.config.js  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  test-login.html  vercel.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  index.js  index.jsx  main.jsx  theme.js
frontend/src/components/: ColorModeSwitcher.jsx  CourseImagePlaceholder.jsx  CourseModule.jsx  ImageUploader.jsx  Layout.jsx  ModuleViewer.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Courses.jsx  (+10 more)
frontend/temp-cra/: package.json
(+41 files in other folders)
